--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -1007,11 +1007,151 @@ math: true
 
 ### 3.2 数据链路层的三个重要问题
 
+#### 封装成帧和透明传输
+
+![waevxdg](/img/waevxdg.png)
+
+* 接收方根据FCS（帧检验序列）字段可以判断帧在传输过程中是否产生了误码
+* 标志字段用于识别帧的开始和结束，即帧定界
+
+![rtbsfv](/img/rtbsfv.png)
+
+![nytdntb](/img/nytdntb.png)
+
+#### 差错检测
+
+![bxfbcf](/img/bxfbcf.png)
+
+#### 可靠传输
+
+![tnrdbf](/img/tnrdbf.png)
+
+#### 总结
+
+![rtndc](/img/rtndc.png)
+
 ### 3.2.1 封装成帧和透明传输
+
+#### 封装成帧
+
+![](/img/vxdvew.png)
+
+![](/img/zbzsve.png)
+
+![](/img/xrbrxv.png)
+
+![](/img/xrbdtxv.png)
+
+#### 透明传输
+
+![](/img/rtdbd.png)
+
+#### 习题
+
+![](/img/awevrzve.png)
+
+![](/img/egvrztb.png)
+
+![](/img/zeve.png)
 
 ### 3.2.2 差错检测
 
+#### 误码的相关概念
+
+![](/img/vze.png)
+
+![](/img/bsev.png)
+
+#### 奇偶校验
+
+![](/img/b54x.png)
+
+![](/img/b4xv4e.png)
+
+![](/img/tnxbd.png)
+
+#### 循环冗余校验
+
+![eabvsxzv](/img/eabvsxzv.png)
+
+![avwe](/img/avwe.png)
+
+![awbexv](/img/awbexv.png)
+
+* 二进制mod2除法相当于对应位进行逻辑异或运算
+
+![](/img/by5r5v.png)
+
+![nbdrxv](/img/nbdrxv.png)
+
+![](/img/654.png)
+
+![](/img/xbre.png)
+
 ### 3.2.3 可靠传输
+
+#### 可靠传输的相关基本概念
+
+![](/img/bvrecac.png)
+
+![](/img/rebvex.png)
+
+![](/img/zevqcwe.png)
+
+![](/img/ntxvvsb.png)
+
+![](/img/srevxd.png)
+
+#### 停止等待协议
+
+##### 停止等待协议的实现原理
+
+![](/img/waebd.png)
+
+![](/img/xdfvxve.png)
+
+* RTT收发双方之间的平均往返时间
+* RTO超时重传时间
+
+![](/img/evzc.png)
+
+![](/img/brxbrv.png)
+
+![](/img/tvrse.png)
+
+##### 停止等待协议的信道利用率
+
+![](/img/ezveces.png)
+
+![](/img/xdrdv.png)
+
+##### 习题
+
+![](/img/ebawc.png)
+
+##### 回退N帧协议
+
+![](/img/waevsdf.png)
+
+![](/img/zvecs.png)
+
+![](/img/rtvsvr.png)
+
+![](/img/nxrdgvbye.png)
+
+* 确认分组ACKn表明序号n及之前的所有数据分组都已正确接收
+
+![](/img/bezce.png)
+
+#### 选择重传协议
+
+![](/img/aewczce.png)
+
+* WT发送窗口，WR滑动窗口
+
+![](/img/ytunyntun.png)
+
+![](/img/txvxvr.png)
 
 ### 3.3 点对点协议PPP
 
