--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -1155,37 +1155,239 @@ math: true
 
 ### 3.3 点对点协议PPP
 
-### 3.4 共享式以太网
+![](/img/acevewa.png)
+
+![](/img/cwcv.png)
+
+![](/img/cwxa.png)
+
+![](/img/thrwac.png)
+
+![](/img/WQX.png)
+
+![](/img/B4AEBW.png)
+
+* 接收方每收到一个PPP帧，就进行CRC检验。若CRC检验正确，就收下这个帧；否则，就丢弃这个帧
+* 使用PPP的数据链路层，向上提供的是不可靠数据传输服务
+
+![](/img/4RAV.png)
 
 ### 3.4.1 网络适配器和MAC地址
 
+![](/img/awec.png)
+
+![](/img/evwac.png)
+
+![](/img/brwev.png)
+
+![](/img/awevawe.png)
+
+![](/img/rbtea.png)
+
+![](/img/CQC.png)
+
+![](/img/REV.png)
+
+* 由48bit构成mac地址，4bit对应一个16进制位，一共12个字符，每两个字符氛围一组，一共6组
+* MAC地址中的组织唯一标识符OUI也称为公司标识符
+
+![](/img/ERCA.png)
+
+* 全球管理：确保在全球没有相同的MAC地址
+* 本地管理：用户可任意分配MAC地址
+* 多播地址：一组接口的地址
+* 单播地址：一个网络接口的地址
+* 本地单播可以覆盖网络接口的全球单播地址
+  * 剩余46bit全为1时，就是广播地址FF-FF-FF-FF-FF-FF
+
+![](/img/RETBVA.png)
+
+![eava](/img/eava.png)
+
+* 接收是指网卡从网络中收到某个帧，而接受是指网卡接收到某个帧后，还要判断这个帧是否符合要求，决定接受还是丢弃这个帧
+
+![avawec](/img/avawec.png)
+
+![ewcacawec](/img/ewcacawec.png)
+
+* BPDU：网桥协议数据单元
+* 各交换机根据BPDU种得一些参数，按照生成树协议所使用的生成树算法，最终某些交换机会阻塞自己的某些接口，这样就破坏了环路，而BPDU首部中的目的地址，就是生成树协议专用的多播MAC地址
+
+![](/img/davawev.png)
+
+![fgsvbaesb](/img/fgsvbaesb.png)
+
 ### 3.4.2 共享式以太网
+
+#### CSMA/CD协议的基本原理
+
+![](/img/yjsve.png)
+
+![](/img/weafvawb.png)
+
+![](/img/evabrwenjye.png)
+
+![](/img/rvaebb.png)
+
+![](/img/gnrtsn.png)
+
+#### 共享式以太网的争用期
+
+![](/img/thnsebr.png)
+
+![](/img/dbsana.png)
+
+![](/img/ykjdtm.png)
+
+![](/img/nytasne.png)
+
+* 单程端到端传播时延其实会小于计算值
+
+#### 共享式以太网的最小帧长和最大帧长
+
+![](/img/rtesmm.png)
+
+![](/img/ynrsern.png)
+
+![](/img/ryeab.png)
+
+![](/img/ytmrsm.png)
+
+#### 共享式以太网的退避算法
+
+![](/img/trbean.png)
+
+#### 共享式以太网的信道利用率
+
+![](/img/yrmse.png)
 
 ### 3.4.3 使用集线器的共享式以太网
 
+![](/img/ynt.png)
+
+![](/img/rtsen.png)
+
+![](/img/rtme.png)
+
+![](/img/rabw.png)
+
+![](/img/yumtrd.png)
+
 ### 3.4.4 在物理层扩展以太网
+
+![](/img/rbten.png)
+
+![](/img/ymrtm.png)
+
+![](/img/ewam6.png)
+
+![](/img/6n65en.png)
+
+* 其中的每个站点，相较于它们原先所在的独立碰撞域，所遭遇碰撞的可能性会明显增加
 
 ### 3.4.5 在数据链路层扩展以太网
 
+#### 使用网桥在数据链路层扩展以太网
+
+![](/img/rensm.png)
+
+* 为了避免形成更大的碰撞域，可以使用网桥在数据链路层
+
+![](/img/rbtew.png)
+
+![](/img/b65be4.png)
+
+* 原来的两个共享式以太网，分别成为这个更大的以太网的一个网段，并且各自是一个独立的碰撞域
+
+![](/img/q4v3q.png)
+
+* 转发表是网桥转发帧的依据，里面记录了网桥所知道的网络中各主机的mac地址与自己各接口的对应关系
+
+![](/img/brt4wn.png)
+
+![](/img/thbern.png)
+
+![](/img/fbesb.png)
+
+![](/img/resyn.png)
+
+#### 透明网桥的自学习和转发帧的流程
+
+![](/img/rdmrnr.png)
+
+![](/img/tbrnn.png)
+
+![](/img/beb.png)
+
+![](/img/juners.png)
+
+#### 透明网桥的生成树协议STP
+
+![](/img/baewtrbse.png)
+
+![](/img/yturesn.png)
+
+![](/img/bersvrrc.png)
+
+![](/img/nyurdn.png)
+
+![](/img/ymtfnb.png)
+
+![](/img/br4wnes.png)
+
 ### 3.5 交换式以太网
 
+#### 交换式以太网
 
+![](/img/uytfmnb.png)
 
+### 3.5.1 以太网交换机
 
+![](/img/brtevc.png)
 
+![](/img/retavcewac.png)
 
+![](/img/rtbavcw.png)
 
+### 3.5.2 共享式以太网和交换式以太网的对比
 
+![](/img/tnsv.png)
 
+![](/img/utsvace.png)
 
+* 集线器只工作在物理层，它并不能识别帧首部中的目的MAC地址，因为这属于数据链路层的范畴
+  * 不管集线器收到的是单播帧还是广播帧，集线器仅仅是将表示帧的信号，从其他所有接口转发出去
+  * 交换机工作在数据链路层，它可以识别帧的结构，从帧首部中提取出目的MAC地址，然后查找自己的转发表，根据查表结果，对帧进行明确转发或盲目转发或丢弃
 
+![](/img/tyvae.png)
 
+![](/img/iybev.png)
 
+![](/img/nybtrvec.png)
 
+![](/img/ntysvrv.png)
 
+### 3.6 以太网的MAC帧格式
 
+### 3.7.1 虚拟局域网VLAN概述
 
+### 3.7.2 虚拟局域网VLAN的实现机制
 
+### 3.8 以太网的发展
+
+### 3.9.1 802.11无线局域网的组成
+
+### 3.9.2 802.11无线局域网的物理层
+
+### 3.9.3 802.11无线局域网的数据链路层——使用CSMA/CA（而不使用CSMA/CD协议）
+
+### 3.9.4 802.11无线局域网的MAC帧
+
+### 4.1 网络层概述
+
+### 4.2.1 网际协议IP和异构网络互连
+
+### 4.2.2 IPv4地址及其编址方法
 
 
 
