--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -1369,21 +1369,242 @@ math: true
 
 ### 3.6 以太网的MAC帧格式
 
+![](/img/ntrsb.png)
+
+![](/img/ukbyrvec.png)
+
+![](/img/unrtybr.png)
+
+![](/img/tsvac.png)
+
+* 当数据载荷字段的长度小于46字节时，数据链路层就会在数据载荷字段的后面插入相应数量的填充字节，以确保MAC帧的长度不小于64字节
+
+![](/img/nrsb.png)
+
+* 前同步码的作用是使接收方的时钟同步
+
 ### 3.7.1 虚拟局域网VLAN概述
+
+#### 虚拟局域网VLAN的诞生背景
+
+![](/img/trsvezc.png)
+
+* 除非应用需求必须要使用广播，否则，网络中的主机应尽量不使用广播
+  * 然而，实际应用中，网络中会频繁出现广播信息
+
+![](/img/6btrse.png)
+
+![](/img/6bvwre.png)
+
+* 路由器工作在网络体系结构中的第三层即网络层，路由器在默认情况下不对广播分组进行转发，因此，路由器很自然地就可以隔离广播域
+
+#### 虚拟局域网VLAN概述
+
+![](/img/nurytbve.png)
+
+![](/img/btrse.png)
 
 ### 3.7.2 虚拟局域网VLAN的实现机制
 
+![](/img/b65ev.png)
+
+![](/img/b56.png)
+
+![](/img/n6b5ve .png)
+
+![](/img/b6v4ca.png)
+
+![](/img/revsc3wq.png)
+
+![](/img/nydbtr.png)
+
+![](/img/ewafwv.png)
+
+![](/img/vravb.png)
+
+![](/img/rtbevesrv.png)
+
+![](/img/nb5verc.png)
+
+* trunk接口一般用于交换机之间或交换机与路由器之间的互连，trunk接口可以属于多个vlan
+* 默认情况下，trunk接口的PVID值为1，一般不建议用户修改，若互连的trunk接口的PVID值不相等，则可能出现转发错误
+
+![](/img/nrzdb.png)
+
+![](/img/b65ev54wv.png)
+
+![](/img/btrve.png)
+
 ### 3.8 以太网的发展
+
+![](/img/tnndr.png)
+
+![](/img/trsev.png)
+
+![](/img/bsevb.png)
+
+![](/img/rbseb.png)
+
+![](/img/avbweb.png)
+
+![](/img/evawb.png)
+
+![](/img/rbevea.png)
+
+![](/img/mutfn.png)
+
+![](/img/jtrr.png)
+
+![](/img/tydrm.png)
+
+![](/img/v23a.png)
+
+![](/img/rsever.png)
+
+![](/img/grdfbn.png)
 
 ### 3.9.1 802.11无线局域网的组成
 
+![](/img/brsen.png)
+
+![](/img/trsebe.png)
+
+* 一个BSS中，包含有一个AP和若干个移动站
+* 一个BSS所覆盖的地理范围称为基本服务区BSA
+
+![](/img/bresb.png)
+
+* 一个BSS可以是孤立的也可以与其他BSS连接
+* 若移动站A从BSS1漫游到BSS2，在漫游过程中，移动站A的接入点从BSS1中的AP1改为了BSS2中的AP2，但移动站A仍可保持与移动站B的通信
+
+![](/img/resnresb.png)
+
+![](/img/ewB.png)
+
+![](/img/ntrdn.png)
+
+* 由一些对等的移动站点构成的临时网络，数据在自组中网络中被多跳存储转发
+* 转发站需要具备路由功能
+* 自组织网络一般不能和因特网直接相连，需要通过网关或协议转换器接入到因特网
+
 ### 3.9.2 802.11无线局域网的物理层
+
+![](/img/rbesnner.png)
 
 ### 3.9.3 802.11无线局域网的数据链路层——使用CSMA/CA（而不使用CSMA/CD协议）
 
+#### 802.11无线局域网使用CSMA/CA协议的原因
+
+![](/img/bsnser.png)
+
+![](/img/evabwb.png)
+
+#### CSMA/CA协议的基本工作原理
+
+![](/img/tnnrd.png)
+
+![](/img/ab.png)
+
+* DCF帧间间隔DIF的长度为128微秒，在DCF方式中，DIFS用来发送数据帧和管理帧
+* DCF即分布式协调功能，在DCF方式下，没有中心控制站点，每个站点使用CSMA/CA协议通过争用信道来获取发送权。DCF方式是802.11定义的默认方式（必须实现）
+* 等待DIFS间隔是考虑到有可能由其他的站有高优先级的帧要发送
+
+![](/img/rnse.png)
+
+* 虚拟载波监听机制
+  * 帧首部中的“持续时间”字段的值指出了源站要占用信道的时间（包括目的站发回确认帧所需的时间）
+  * 若源站在重传计时器设置的超时时间内，没有收到ACK，就必须重传之前已发送的数据帧，直到收到ACK为止，或者经过若干次的重传失败后放弃发送。
+  * 当某个站检测到正在信道中传送的帧首部中的“持续时间”字段时，就调整自己的网络分配向量。NAV指出了完成这次帧的传送且信道转入空闲状态所需的时间
+
+![](/img/4bbsn.png)
+
+![](/img/4n3.png)
+
+![bvwa](/img/bvwa.png)
+
+![](/img/b4nw4g.png)
+
+![](/img/tnnreee.png)
+
+![](/img/rbesbersb.png)
+
+![](/img/sbwbe.png)
+
+![](/img/j6rjh.png)
+
+![](/img/b4vw.png)
+
+![](/img/vaewwv.png)
+
+![](/img/b4aw44.png)
+
+![](/img/4vw4v.png)
+
+![](/img/4v3.png)
+
+![](/img/v4a4b.png)
+
+![](/img/b453an.png)
+
+![](/img/b45abbw.png)
+
+![](/img/bresn.png)
+
+![](/img/versbew.png)
+
+* A和B互为隐蔽站，A给AP发送RTS帧进行信道预约，虽然B监听不到该帧，但却能监听到AP应答给A的CTS帧，B根据CTS帧中的持续时间，修改自己的网络分配向量NAV，在NAV指示的时间内，虽然B监听不到A发送给AP的帧，但B也不会发送帧干扰A和AP的通信
+
+#### 总结
+
+![](/img/vwce.png)
+
+![](/img/uuyntrbve.png)
+
 ### 3.9.4 802.11无线局域网的MAC帧
 
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+
+
 ### 4.1 网络层概述
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
+
+![]()
 
 ### 4.2.1 网际协议IP和异构网络互连
 
