--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -4,8 +4,8 @@ date: 2024-07-14 17:04:20
 tags: 408专业课
 sticky: 142
 categories: 408
-banner_img: 1920x1080 (11).jpg
-index_img: 1920x1080 (11).jpg
+banner_img: /img/1920x1080 (11).jpg
+index_img: /img/1920x1080 (11).jpg
 math: true
 ---
 ## 第一章 绪论
