--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -4,8 +4,8 @@ date: 2024-07-31 23:28:42
 tags: 408专业课
 sticky: 143
 categories: 408
-banner_img: 1920x1080 (26).jpg
-index_img: 1920x1080 (26).jpg
+banner_img: /img/1920x1080 (26).jpg
+index_img: /img/1920x1080 (26).jpg
 math: true
 ---
 ## 第一章
