--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -4,8 +4,8 @@ date: 2024-08-06 05:26:25
 tags: 408专业课
 sticky: 146
 categories: 408
-banner_img: 1920x1080 (27).jpg
-index_img: 1920x1080 (27).jpg
+banner_img: /img/1920x1080 (27).jpg
+index_img: /img/1920x1080 (27).jpg
 math: true
 ---
 
