--- a/source/_posts/计算机网络.md
+++ b/source/_posts/计算机网络.md
@@ -983,7 +983,7 @@ math: true
 
 ![jrtb](/img/jrtb.png)
 
-## 第三章 
+## 第三章 数据链路层
 
 ### 3.1 数据链路层概述
 
@@ -1595,6 +1595,8 @@ math: true
 * 802.11帧中必须要携带AP的MAC地址，而以太网帧中却不需要携带AP的MAC地址
 * 在以太网中，AP与透明网桥一样对各站点是透明的，因此，以太网帧中就不需要指出AP的MAC地址
   * 然而在802.11无线局域网中，在站点的信号覆盖范围内，可能会有多个AP共享同一个物理信道，但站点只能与其中的一个AP建立关联，因此802.11帧中就必须携带AP的MAC地址来明确指出转发该帧的AP
+
+## 第四章 网络层
 
 ### 4.1 网络层概述
 
@@ -2310,6 +2312,8 @@ math: true
 
 ![](/img/124632.jpg)
 
+## 第五章 运输层
+
 ### 5.1 运输层概述
 
 #### 进程间基于网络的通信
@@ -2673,6 +2677,8 @@ math: true
 ![](/img/sfbsbre.png)
 
 ![](/img/hnbbtyhft.png)
+
+## 第六层 应用层
 
 ### 6.1 应用层概述
 
