--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -12,4 +12,18 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 及时notion
 
-# 
+# 1.如何备考数据结构大题
+
+![](/img/205513.jpg)
+
+## 大题的题型
+
+![](/img/205610.jpg)
+
+## 八大考点
+
+![](/img/05710.jpg)
+
+## 七大考法
+
+![](/img/205729.jpg)
