--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -14,9 +14,9 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 
 # 4.1 时间复杂度
 
-![](F:\try\home\themes\fluid\source\img\1000090142.jpg)
+![](/img/1000090142.jpg)
 
-![](F:\try\home\themes\fluid\source\img\1000090141.jpg)
+![](/img/1000090141.jpg)
 
 # 4.2 时间复杂度
 
@@ -27,3 +27,21 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 ![](/img/1000090281.jpg)
 
 ![](/img/1000090283.jpg)
+
+# 4.3 链表
+
+![](/img/c7612a1d-066a-44eb-883f-69f8d0e5f0c2.jpeg)
+
+![](/img/96b3ad68-07ea-49bb-aead-c27814c22a4e.png)
+
+# 4.4 链表
+
+![](/img/1de1061e-7c58-4174-bd38-66c53f0a1077.png)
+
+![](/img/21446080-468c-43cf-97d0-8efbcb60d3b6.png)
+
+# 4.5 栈
+
+![](/img/78c9220e-2be1-4f72-bd40-25dc166dc0db.jpeg)
+
+![](/img/68b693da-589b-4d27-b345-6b9e48edce13.png)
