--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -16,14 +16,121 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 ![](/img/205513.jpg)
 
+* 数据结构的小题最好的复习方法是把王道书的课后习题二刷
+* 多做题少听课
+* 主动发现自己不足的地方，去查缺补漏而不是遍历课本
+
 ## 大题的题型
 
 ![](/img/205610.jpg)
+
+* 应用题侧重于算法的逻辑而不是算法代码的实现
+* 大纲里面应用相关即大题要考的考点
+* 应用题备考思路：
+  * 画数据结构和算法运行过程
+  * 训练数据结构定义的简单代码
+  * 基本操作的简单代码
 
 ## 八大考点
 
 ![](/img/05710.jpg)
 
+### ①线性表的应用
+
+### ②栈的应用
+
+### ③队列的应用
+
+### ④数组的应用
+
+### ⑤树与二叉树的应用
+
+* 二叉树基本考的就是哈夫曼树和哈夫曼编码，并查集及其应用。其他的题型通常是定义数据结构或者实现基本操作
+
+### ⑥图的基本应用
+
+* 比较基本的应用
+* 应用题一般不用写代码但是要手算，能够懂这些算法运行的逻辑
+
+#### 最小（代价）生成树
+
+* 最小生成树考察的是一个图中包含多个点的总路线代价最短
+  * 而单源最短路径只考虑两点之间最短距离的路径
+
+#### 最短路径
+
+#### 拓扑排序
+
+#### 关键路径
+
+#### 其他
+
+* 数据结构定义
+* 画图
+
+### ⑦查找算法的分析及应用
+
+* 二叉搜索树、平衡二叉树和红黑树可能和树与二叉树考点进行比较深度的结合
+  * 比如给出一个关键字序列，从一个空的二叉树开始插入这些关键字，然后画出插入以后的平衡二叉树的形态，同时给出这个平衡二叉树的数据结构定义
+  * 大概率应用题而不是代码
+  * 尤其是平衡二叉树和红黑树
+
+* 散列（哈希）表
+  * 大概率应用题而不是代码
+* B树及其基本操作
+  * 不太可能在应用题当中考察，只考基本概念，不用管基本操作，b树小题里面一般可能考
+* 分块查找
+  * 应用题
+* 字符串模式匹配
+  * 大概率应用题而不是代码
+* 查找算法的性能分析，分析平均查找长度，成功的ASL和失败的ASL
+
+### ⑧排序算法的分析及应用
+
+* 希尔排序
+  * 更容易考小题而不是应用题
+* 堆排序
+* 基数排序
+* 外部排序
+
 ## 七大考法
 
 ![](/img/205729.jpg)
+
+### ①画图作答
+
+* （1）画数据结构的状态示意图
+  * 重中之重
+  * 一般是考察比较复杂的数据结构的图示
+
+### ②代码作答
+
+* （1）写数据结构定义、基本操作代码
+  * 简单的代码
+  * 基本操作/功能的代码片段，比如判断队空或者插入
+  * 比较复杂的数据结构不会考很复杂的算法题，但可能考数据结构的代码定义以及基本操作的代码实现
+
+### ③文字简答
+
+* （1）手算分析算法运行过程/结果
+* （2）数据结构、算法的选择
+  * 基于应用场景选择一种合适的数据结构
+  * 基于应用场景选择一种性能比较好的算法
+* （3）算法性质分析
+  * 分析算法的时间复杂度和空间复杂度
+    * 所有算法都有可能考
+  * 查找算法
+    * 分析平均查找长度
+    * 成功ASL和失败ASL
+  * 排序算法
+    * 分析关键字的对比次数
+      * 某一趟排序当中关键字的对比次数是多少
+      * 排完序关键字的总对比次数是多少
+    * 稳定性
+* （4）文字描述算法思想/过程
+  * 可以通过示意图去解释算法的运行过程，用文字描述也可以解和画图去做
+  * 将画数据结构的状态示意图和手算分析算法运行过程/结果结合起来，从这两个角度去把各个算法的运行过程和数据结构的示意图捋清楚
+* （5）数据结构性质推演
+  * 树和图的性质推演
+    * 主要根据王道书的课后小题来复习
+
