--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2,7 +2,7 @@
 title: 数据结构算法笔试
 date: 2025-04-02 18:55:05
 tags: 408日常
-skicky: 259
+sticky: 259
 banner_img: /img/1920x1080 (16).jpg
 index_img: /img/1920x1080 (16).jpg
 math: true
