--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -2,7 +2,7 @@
 title: 每日一题
 date: 2025-04-02 19:00:09
 tags: 408日常
-skicky: 269
+sticky: 269
 banner_img: /img/1920x1080 (13).jpg
 index_img: /img/1920x1080 (13).jpg
 math: true
