--- a/source/_posts/时间复杂度特集.md
+++ b/source/_posts/时间复杂度特集.md
@@ -3,6 +3,8 @@ title: 时间复杂度特集
 date: 2025-04-02 16:28:54
 tags: 408专业课
 sticky: 192
+banner_img: /img/1920x1080 (6).jpg
+index_img: /img/1920x1080 (6).jpg
 ---
 
 # 定义法计算时间复杂度
