--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -18,6 +18,11 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 
 ![](/img/1000090141.jpg)
 
+错题：
+
+* 1
+* 2
+
 # 4.2 时间复杂度
 
 ![](/img/1000090273.png)
@@ -28,11 +33,21 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 
 ![](/img/1000090283.jpg)
 
+错题：
+
+* 1
+* 2
+
 # 4.3 链表
 
 ![](/img/c7612a1d-066a-44eb-883f-69f8d0e5f0c2.jpeg)
 
 ![](/img/96b3ad68-07ea-49bb-aead-c27814c22a4e.png)
+
+错题：
+
+* 2
+  * 注意特殊条件
 
 # 4.4 链表
 
@@ -40,26 +55,48 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 
 ![](/img/21446080-468c-43cf-97d0-8efbcb60d3b6.png)
 
+错题：
+
+* 2
+  * -1表示指向NULL，-2表示空表项
+
 # 4.5 栈
 
 ![](/img/78c9220e-2be1-4f72-bd40-25dc166dc0db.jpeg)
 
 ![](/img/68b693da-589b-4d27-b345-6b9e48edce13.png)
 
-# 4.6
+错题：
+
+* 无
+* 卡塔兰数的计算确实只与**入栈序列的长度**有关，而**不关心入栈序列的具体内容或元素的顺序**。这是因为卡塔兰数计算的是栈操作的合法性约束，而栈操作的合法性取决于**元素的相对入栈顺序和出栈顺序**，而非具体的元素值。因此，对于任何长度为 nnn 的入栈序列，合法的出栈序列的个数始终是固定的，由卡塔兰数给出。
+
+# 4.6 队列和栈
 
 ![](/img/c450ec4d-668c-4100-9388-189aa3332d2a.png)
 
 ![](/img/f93f05f3-a1bd-4936-9620-61af84c15406.png)
 
-# 4.7
+错题：
+
+* 无
+
+# 4.7 队列和栈
 
 ![](/img/e98c3709-dfde-4208-b473-67cd033cd511.png)
 
 ![](/img/04b755c7-eb4e-453a-95d7-abcafdcfddba.png)
 
-# 4.8
+错题：
+
+* 无
+
+# 4.8 队列
 
 ![](/img/b6c0d57c-3e58-44a1-8e8d-c46541044268.png)
 
 ![](/img/77b00a1e-732c-48d5-8e1b-69d277e71178.png)
+
+错题：
+
+* 无
