--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -12,7 +12,7 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 及时notion
 
-# 1.如何备考数据结构大题
+# 如何备考数据结构大题
 
 ![](/img/205513.jpg)
 
@@ -134,3 +134,26 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
   * 树和图的性质推演
     * 主要根据王道书的课后小题来复习
 
+# 应用题
+
+![](/img/191649.jpg)
+
+## 排序类应用题
+
+![](F:\try\home\themes\fluid\source\img\170219.jpg)
+
+![](F:\try\home\themes\fluid\source\img\171218.jpg)
+
+![](F:\try\home\themes\fluid\source\img\74000.jpg)
+
+![](F:\try\home\themes\fluid\source\img\174043.jpg)
+
+
+
+## 查找类应用题
+
+## 树类应用题
+
+## 图类应用题
+
+## 线性表类应用题
