--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -8,10 +8,6 @@ index_img: /img/1920x1080 (13).jpg
 math: true
 ---
 
-https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
-
-及时notion
-
 # 4.1 时间复杂度
 
 ![](/img/1000090142.jpg)
@@ -100,3 +96,35 @@ https://www.notion.so/408-1c8b5125721b803595d4fcbade429ef4?pvs=4
 错题：
 
 * 无
+
+# 4.9 中缀表达式和后缀表达式
+
+![](/img/9c8c4bba-e4b8-4c40-9bf6-7820fcd13770.png)
+
+![](/img/6d688edc-8ed1-4f5e-aa04-3779ecc6f09f.png)
+
+错题：
+
+# 4.10 后缀表达式和二叉树的层序遍历
+
+![](/img/aff03896-e878-4ebf-87e6-2d9aa59cce52.jpeg)
+
+![](/img/dfc37544-7ddf-4e8c-840f-4fb98e885e38.jpeg)
+
+错题：
+
+# 4.11 数组的压缩存储
+
+![](/img/b07e9735-d19a-4c81-83b8-4292cc53b690.jpeg)
+
+![](/img/0210e7b7-a097-4eb3-b9e4-e4e76559d460.png)
+
+错题：
+
+# 4.12 kmp算法
+
+![](/img/d717129d-709c-4ed5-b9e4-9164b1a851d4.png)
+
+![](/img/b0c11abc-86b2-4a3a-b5c7-cc8bb33c5a03.png)
+
+错题：
