--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -140,17 +140,30 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 ## 排序类应用题
 
-![](F:\try\home\themes\fluid\source\img\170219.jpg)
+![](/img/170219.jpg)
 
-![](F:\try\home\themes\fluid\source\img\171218.jpg)
+![](/img/171218.jpg)
 
-![](F:\try\home\themes\fluid\source\img\74000.jpg)
+![](/img/74000.jpg)
 
-![](F:\try\home\themes\fluid\source\img\174043.jpg)
+![](/img/174043.jpg)
 
-
+* 插入类排序：直接插入排序、折半插入排序、希尔排序
+  * 能够保证相对升序的序列（有可能是跳跃的，也有可能是前面的i+1个
+* 选择类排序：简单选择排序、堆排序
+  * 堆排序：（大根堆）每次选择堆顶元素放在最后（和堆底元素交换），每次将最大的元素放在最后面
+    * 第一趟排序是建堆完之后再把它那个最大的元素换到最后面的结果
+  * 每次都有一个元素被放在最终位置
+* 交换类排序：冒泡排序、快速排序
+  * 每次根据逆序对进行交换
+  * 快速排序：
+    * 枢值一般选取序列的第一个元素
+* 不稳定排序算法的特点
+  * 对于一种排序算法，我们要交换前两个位置的时候，如果它看不到前面有一个和他相同的元素，就有可能出现不稳定
 
 ## 查找类应用题
+
+![](F:\try\home\themes\fluid\source\img\205833.jpg)
 
 ## 树类应用题
 
