--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -8,10 +8,6 @@ index_img: /img/1920x1080 (16).jpg
 math: true
 ---
 
-https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
-
-及时notion
-
 # 如何备考数据结构大题
 
 ![](/img/205513.jpg)
@@ -138,6 +134,8 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 ![](/img/191649.jpg)
 
+* 先找到题目中的线索，然后遍历一下这类问题的做法
+
 ## 排序类应用题
 
 ![](/img/170219.jpg)
@@ -163,7 +161,19 @@ https://www.notion.so/1c9b5125721b807d8a99d758f4e78917?pvs=4
 
 ## 查找类应用题
 
-![](F:\try\home\themes\fluid\source\img\205833.jpg)
+![](/img/205833.jpg)
+
+* 折半查找
+  * 元素有序，顺序表
+* 散列查找查找失败的情况
+  * 线性探测法，查找到空位的时候说明查找失败，比较空的数组元素会计入一次比较次数
+  * 链地址法，比较到一个空指针的位置才是查找失败，但是该比较空指针不会算进比较次数
+  * 装填因子在链地址法中可以大于1，但是存储效率一定是小于等于100%的
+
+![](/img/2213835.jpg)
+
+* 链式存储，考虑二叉搜索树
+* 顺序存储，顺序查找和折半查找（注意排序）比较常见
 
 ## 树类应用题
 
