--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -12,6 +12,12 @@ math: true
 
 ![](/img/205513.jpg)
 
+![](/img/cweqjcewq.png)
+
+![](/img/qweewqc.png)
+
+![](/img/weqcwqtvqee.png)
+
 * 数据结构的小题最好的复习方法是把王道书的课后习题二刷
 * 多做题少听课
 * 主动发现自己不足的地方，去查缺补漏而不是遍历课本
@@ -169,6 +175,7 @@ math: true
   * 线性探测法，查找到空位的时候说明查找失败，比较空的数组元素会计入一次比较次数
   * 链地址法，比较到一个空指针的位置才是查找失败，但是该比较空指针不会算进比较次数
   * 装填因子在链地址法中可以大于1，但是存储效率一定是小于等于100%的
+  * 查找成功的时候分母是元素数量，查找失败的时候分母是取模后面的那个数字（因为无法映射到其他更大的数字）
 
 ![](/img/2213835.jpg)
 
@@ -180,3 +187,218 @@ math: true
 ## 图类应用题
 
 ## 线性表类应用题
+
+# 算法题
+
+![](/img/fhiwqiyehfih.png)
+
+![](/img/defewfqf.png)
+
+![](/img/hntedehb.png)
+
+* 算法题
+  * 一题多解，分数高中低三档
+  * 可以先写第二小问再写第一小问
+  * 顺序表和链表一般情况下要考察时间复杂度
+  * 树和图一般不考时间复杂度和空间复杂度，分析要求低一点，但依旧要记得
+    * 树和图能解决问题比高效解决问题最重要，只要能解决问题笨方法也可以，只要能掌握常规代码即可
+* 备考方法
+  * 阶段一：完成历年真题
+  * 阶段二：分模块训练
+  * 阶段三：少食多餐，增加做题量
+  * 阶段四：考前保持手感，再刷历年真题
+
+## 排序
+
+### 顺序表
+
+* 快排和堆排是所有排序算法中效率最高的，但是快排代码简单，堆排代码复杂，所以快排最优
+
+* 考试按照时间复杂度给分
+
+* 套路型算法：
+
+  * 快速排序
+    * 能快排就快排，不能用快排的再考虑用其他排序
+    * 快排只能在顺序表和数组（静态链表）中使用，链表当中不能用快排，因此当涉及顺序表（数组）的题目，考虑能否使用到快速排序。
+    * 如果题目中给的是一个乱序数组的话，如果把这个乱序数组变成有序，我们用快排的套路，先把它变成有序，能否更加轻松的解决这个问题，从这个角度思考
+    * 时间复杂度O(nlogn)
+
+  ```c++
+  void quick_sort(int q[], int l, int r)
+  {
+  if (l >= r) return;
+  int i = l - 1, j = r + 1, x = q[l + r >> 1];
+   while (i < j)
+     {
+          do i ++ ; while (q[i] < x);
+          do j -- ; while (q[j] > x);
+          if (i < j) swap(q[i], q[j]);
+     }
+      quick_sort(q, l, j), quick_sort(q, j + 1, r);
+  }
+  ```
+
+  
+
+  * 归并排序
+    * 时间复杂度O(nlogn)
+    * 如果我们在考题当中遇到排序类的题目，要求把一个乱序的数组排成一个更大的数组，如果这个数组本身部分有序，那么我们采用归并排序比快速排序更加优秀
+
+  ```c++
+  void merge_sort(int q[], int l, int r)
+  {
+      if (l >= r) return;
+  
+      int mid = l + r >> 1;
+      merge_sort(q, l, mid);
+      merge_sort(q, mid + 1, r);
+  
+      int k = 0, i = l, j = mid + 1;
+      while (i <= mid && j <= r)
+          if (q[i] <= q[j]) tmp[k ++ ] = q[i ++ ];
+          else tmp[k ++ ] = q[j ++ ];
+  
+      while (i <= mid) tmp[k ++ ] = q[i ++ ];
+      while (j <= r) tmp[k ++ ] = q[j ++ ];
+  
+      for (i = l, j = 0; i <= r; i ++, j ++ ) q[i] = tmp[j];
+  
+  }
+  ```
+
+  
+
+  * 快速排序更擅长将一个原本乱序的数组排成有序
+    * 二路归并排序更擅长将两个原本有序的数组合并为一个，时间复杂度仅为O(n)
+    * 通常来说，对乱序数组的排序，用归并不如用快排
+    * 如果题目中给的是两个有序表，并且需要将两个有序表合并为一个，可以考虑用归并思想
+
+### 链表
+
+* 不支持随机访问，算法较少
+* 考察偏向于考基本功
+  * 按位序查找
+  * 按关键字条件查找+删除某个节点
+  * 按关键字条件查找+插入某个节点
+  * 头插法（可实现原地逆置）
+  * 尾插法（保持原序）
+
+## 树
+
+* 掌握前中后序遍历、层序遍历、递归算法
+  * 非递归算法不用掌握
+  * 基于这些算法解决思维导图中列出的问题，然后做一下王道书的剩余算法题
+
+## 图
+
+* 数据结构层面
+  * 邻接矩阵和邻接表的遍历
+  * 邻接多重表和十字链表的定义
+
+* 算法备考
+
+  * DFS，BFS
+
+  ```c++
+  bool st[N];
+  int dfs(int u)
+  {
+      st[u] = true; // st[u] 表示点u已经被遍历过
+  
+      for (int i = h[u]; i != -1; i = ne[i])//遍历点的边
+      {
+          int j = e[i];//存储当前链表节点对应的图里面的点的编号
+          if (!st[j]) dfs(j);//j没有被搜到，继续搜
+      }
+  }
+  ```
+
+  ```c++
+  queue<int> q;//初始化
+  st[1] = true; // 表示1号点已经被遍历过
+  q.push(1);
+  
+  while (q.size())//队列不空
+  {
+      int t = q.front();
+      q.pop();
+  
+      for (int i = h[t]; i != -1; i = ne[i])
+      {
+          int j = e[i];
+          if (!st[j])
+          {
+              st[j] = true; // 表示点j已经被遍历过
+              q.push(j);
+          }
+      }
+  }
+  
+  int bfs()
+  {
+  	int hh =0,tt=0;//定义队头队尾
+      q[0]=1;//q的第一个元素起点
+      memset(d,-1,sizeof d);//初始化距离，-1表示没有被遍历过
+      d[1]=0;//第一个点遍历
+      while(hh<=tt){//队列不空
+          int t=q[hh++]//取到队头
+              for(int i = h[t];i!=-1;i=e[i])//拓展队头
+              {
+                  int j =e[i];//拓展到队头连接的下一个点
+                 if(d[j]==-1)//d[j]没有被拓展过
+                 {
+                     d[j]=d[t]+1;
+                     q[++tt]=j;
+                 }
+              }
+      }
+      return 0;
+  }
+  ```
+
+  
+
+  * 拓扑排序
+
+  ```c++
+  int n,m;
+  int h[N],e[N],ne[N],idx;
+  int d[N],q[N];//d[n]表示入度，q[n]是拓扑序列
+  void add(int a,int b){
+      e[idx] = b;
+      ne[idx] = h[a];
+      h[a]=idx++;
+      
+  }
+  bool topsort()
+  {
+      int hh = 0, tt = -1;
+  
+      // d[i] 存储点i的入度
+      for (int i = 1; i <= n; i ++ )
+          if (!d[i])
+              q[ ++ tt] = i;//数组模拟入队
+  
+      while (hh <= tt)//队列不空
+      {
+          int t = q[hh ++ ];//取出来队头
+  
+          for (int i = h[t]; i != -1; i = ne[i])//枚举t的所有出边t->j，删掉t->j
+          {
+              int j = e[i];//找到出边
+             d[j]--;
+              if ( d[j] == 0)//前面的所有点都已经排好了
+                  q[ ++ tt] = j;//j入队
+           
+          }
+      }
+  
+      // 如果所有点都入队了，说明存在拓扑序列；否则不存在拓扑序列。
+      return tt == n - 1;
+  }
+  //出队的顺序就是拓扑序
+  ```
+
+  
+
