--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -128,3 +128,9 @@ math: true
 ![](/img/b0c11abc-86b2-4a3a-b5c7-cc8bb33c5a03.png)
 
 错题：
+
+# 4.13 kmp算法
+
+![](/img/2235f6f9-b6bf-4e2a-a536-b8a7508bd29b.png)
+
+![](/img/399c208f-d3a9-4c26-9073-1435d641c4a9.png)
