--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -294,12 +294,85 @@ math: true
 
 * 数据结构层面
   * 邻接矩阵和邻接表的遍历
+    * 邻接矩阵可以for循环遍历
+  * 但是邻接表只能bfs或者dfs
   * 邻接多重表和十字链表的定义
-
+  
 * 算法备考
 
-  * DFS，BFS
+  * 栈、队列的数组表示（用来理解下面的代码）
 
+  ```c++
+  // tt表示栈顶
+  int stk[N], tt = 0;//stk表示栈，tt表示栈顶下标
+  
+  // 向栈顶插入一个数
+  stk[ ++ tt] = x;
+  
+  // 从栈顶弹出一个数
+  tt -- ;
+  
+  // 栈顶的值
+  stk[tt];
+  
+// 判断栈是否为空，如果 tt > 0，则表示不为空
+  if (tt > 0) not empty;
+  else empty;
+  
+  //栈顶
+  stk[tt];
+  ```
+  
+  ```c++
+  // hh 表示队头，tt表示队尾
+  int q[N], hh = 0, tt = -1;
+  
+  // 向队尾插入一个数
+  q[ ++ tt] = x;
+  
+  // 从队头弹出一个数
+  hh ++ ;
+  
+  // 队头的值
+  q[hh];
+  
+  //取出队尾
+  q[tt];
+  
+  // 判断队列是否为空，如果 hh <= tt，则表示不为空
+  if (hh <= tt) not empty;
+      else empty;
+  
+  ```
+  
+  ```c++
+  //循环队列
+  // hh 表示队头，tt表示队尾的后一个位置
+  int q[N], hh = 0, tt = 0;
+  
+  // 向队尾插入一个数
+  q[tt ++ ] = x;
+  if (tt == N) tt = 0;
+  
+  // 从队头弹出一个数
+  hh ++ ;
+  if (hh == N) hh = 0;
+  
+// 队头的值
+  q[hh];
+
+  // 判断队列是否为空，如果hh != tt，则表示不为空
+if (hh != tt)
+  {
+  
+  }
+  
+  ```
+  
+  
+  
+  * DFS，BFS
+  
   ```c++
   bool st[N];
   int dfs(int u)
@@ -313,7 +386,7 @@ math: true
       }
   }
   ```
-
+  
   ```c++
   queue<int> q;//初始化
   st[1] = true; // 表示1号点已经被遍历过
@@ -328,7 +401,7 @@ math: true
       {
           int j = e[i];
           if (!st[j])
-          {
+        {
               st[j] = true; // 表示点j已经被遍历过
               q.push(j);
           }
@@ -356,11 +429,11 @@ math: true
       return 0;
   }
   ```
-
   
-
+  
+  
   * 拓扑排序
-
+  
   ```c++
   int n,m;
   int h[N],e[N],ne[N],idx;
@@ -400,5 +473,319 @@ math: true
   //出队的顺序就是拓扑序
   ```
 
+## 一休的算法题建议
+
+### 评分细则
+
+* 顺序表、链表注意复杂度
+  * 分数差别主要在于时间复杂度
+* 树、图注意细节
+  * 分数差别主要在于特殊情况是否考虑到
+* 序列就是数组
+
+### 答题技巧
+
+* 顺序表和链表
+
+  * 暴力解
+    * 枚举
+  * 其他解
+    * 有序
+      * 折半查找
+        * 链表不适用
+        * 适用于有序数组
+      * 多指针法（归并思想）
+    * 无序
+      * 散列表
+        * 典型应用：计数器
+      * 先排序再按有序做
+      * 快排思想
+  * 目标：尽量优化自己的算法，让自己的复杂度变低
+
+* 树
+
+  * 核心是遍历（递归）
+    * 先序
+    * 中序
+    * 后序
+    * 层序
+  * 实际上王道书上的树的递归算法可以跳过，因为不同的先序、后序、中序算法都是不一样的，还有不一样的写法。
+    * 如果递归的话，先中后逻辑都是一样的，实际上只有三行核心代码
+
+  ```c++
+  //先序（根→左→右）
+  void preorder(btnode *p){
+      if(p==NULL){
+          return;
+          visit(p);//对p结点访问等，这道题真正要写的东西，比如题目要求我们做什么，树的每道题不同的点就在于这个visit
+          preorder(p->lchild);
+          preorder(p->rchild);
+          //这三条语句，visit在先就是先序，在中就是中序，在后就是后序
+      }
+  }
+  //中序（左→根→右）
+  void inorder(btnode *p){
+      if(p==NULL)
+          return ;
+     inorder(p->lchild);
+      visit(p);
+      inorder(p->rchild);
+  }
+  //后序（左→右→根）
+  void postorder(btnode *p){
+      if(p==NULL)
+          return;
+      postorder(p->lchild);
+      postorder(p->rchild);
+      visit(p);
+  }
+  ```
+
   
 
+* 图
+
+  * 基本遍历
+  * 最小生成树
+
+  ```c++
+  //普利姆prim算法,时间复杂度O(n^2)
+  int n;      // n表示点数
+  int g[N][N];        // 邻接矩阵，存储所有边
+  int dist[N];        // 存储其他点到当前最小生成树的距离
+  bool st[N];     // 存储每个点是否已经在生成树中
+  
+  //到集合的距离就是一个点连接集合的所有边中最短的那一条
+  // 如果图不连通，则返回INF(值是0x3f3f3f3f), 否则返回最小生成树的树边权重之和
+  int prim()
+  {
+      memset(dist, 0x3f, sizeof dist);//初始化最短距离
+  
+      int res = 0;
+      for (int i = 0; i < n; i ++ )//n次迭代
+      {
+          int t = -1;//不在集合当中的距离最小点的编号
+          for (int j = 1; j <= n; j ++ )
+              if (!st[j] && (t == -1 || dist[t] > dist[j]))
+                  t = j;
+  
+          if (i && dist[t] == INF) return INF;
+  
+          if (i) res += dist[t];//只要不是第一个点
+          st[t] = true;
+  
+          for (int j = 1; j <= n; j ++ ) dist[j] = min(dist[j], g[t][j]);
+      }
+  
+      return res;
+  }
+  ```
+
+  ```c++
+  //克鲁斯卡尔Kruskal算法,时间复杂度O(mlogn)
+  int n, m;       // n是点数，m是边数
+  int p[N];       // 并查集的父节点数组
+  
+  struct Edge     // 存储边
+  {
+      int a, b, w;
+  
+      bool operator< (const Edge &W)const//重载小于号
+      {
+          return w < W.w;
+      }
+  }edges[M];
+  
+  int find(int x)     // 并查集核心操作
+  {
+      if (p[x] != x) p[x] = find(p[x]);
+      return p[x];
+  }
+  
+  int kruskal()
+  {
+      sort(edges, edges + m);//把所有边排序
+  
+      for (int i = 1; i <= n; i ++ ) p[i] = i;    // 初始化并查集
+  
+      int res = 0, cnt = 0;
+      for (int i = 0; i < m; i ++ )//从小到大枚举所有边
+      {
+          int a = edges[i].a, b = edges[i].b, w = edges[i].w;
+  
+          a = find(a), b = find(b);//让a，b分别等于祖宗节点
+          if (a != b)     // 如果两个连通块不连通，则将这两个连通块合并
+          {
+              p[a] = b;//合并两个连通块
+              res += w;//存的是最小生成树中所有树边的权重之和
+              cnt ++ ;//存的是当前加入了多时少条边
+          }
+      }
+  
+      if (cnt < n - 1) return INF;//图不是联通的
+      return res;//输出所有树边的权重之和
+  }
+  ```
+
+  * 最短路径
+
+  ```c++
+  //朴素dijkstra算法，时间复杂度O(n^2)
+  int g[N][N];  // 存储每条边
+  int dist[N];  // 存储1号点到每个点的最短距离
+  bool st[N];   // 存储每个点的最短路是否已经确定
+  
+  // 求1号点到n号点的最短路，如果不存在则返回-1
+  int dijkstra()
+  {
+      memset(dist, 0x3f, sizeof dist);//初始化其他距离
+      dist[1] = 0;//初始化第一个点的距离
+  
+      for (int i = 0; i < n - 1; i ++ )
+      {
+          int t = -1;     // 在还未确定最短路的点中，寻找距离最小的点
+          for (int j = 1; j <= n; j ++ )
+              if (!st[j] && (t == -1 || dist[t] > dist[j]))//当前点还没有确定最短路；没有赋值或者不是最短的
+                  t = j;//赋值
+    // if(t==n)break;//优化可以加上
+          // 用t更新其他点的距离
+          for (int j = 1; j <= n; j ++ )
+              dist[j] = min(dist[j], dist[t] + g[t][j]);
+  //判断长度，得出最小距离并更新
+          st[t] = true;
+      }
+  
+      if (dist[n] == 0x3f3f3f3f) //不连通
+          return -1;
+      return dist[n];
+  }
+  //输入输出
+  cin >> n>>m;
+  memset(g,0x3f,sizeof g);
+  while(m--){
+      int a,b,c;
+      cin>>a>>b>>c;
+      g[a][b]=min(g[a][b],c);
+  }
+  int t =dijkstra()l
+      cout<<t;
+  return 0;
+  ```
+
+  ```c++
+  //堆优化版dijkstra算法，时间复杂度O(mlogn)
+  typedef pair<int, int> PII;
+  
+  int n;      // 点的数量
+  int h[N], w[N], e[N], ne[N], idx;       // 邻接表存储所有边
+  int dist[N];        // 存储所有点到1号点的距离
+  bool st[N];     // 存储每个点的最短距离是否已确定
+  
+  void add(int a,int b,int c){
+      e[idx]=b,w[idx]= c,ne[idx]=h[a],h[a]=idx++;
+  }
+  // 求1号点到n号点的最短距离，如果不存在，则返回-1
+  int dijkstra()
+  {
+      memset(dist, 0x3f, sizeof dist);
+      dist[1] = 0;
+      priority_queue<PII, vector<PII>, greater<PII>> heap;//定义小根堆
+      heap.push({0, 1});      // first存储距离，second存储节点编号
+  
+      while (heap.size())//堆里面非空
+      {
+          auto t = heap.top();
+          heap.pop();
+  
+          int ver = t.second, distance = t.first;//编号；距离
+  
+          if (st[ver]) continue;//冗余备份
+          st[ver] = true;
+  
+          for (int i = h[ver]; i != -1; i = ne[i])
+          {
+              int j = e[i];
+              if (dist[j] > distance + w[i])
+              {
+                  dist[j] = distance + w[i];//更新距离
+                  heap.push({dist[j], j});//放入堆
+              }
+          }
+      }
+  
+      if (dist[n] == 0x3f3f3f3f) return -1;
+      return dist[n];
+  }
+  int main(){
+      cin >> n>>m;
+      memset(h,-1,sizeof h);
+      while(m--){
+          int a,b,c;
+          cin >> a >> b>>c;
+          add(a,b,c);
+      }
+      int t = dijkstra();
+      cout<<t;
+      return 0;
+  }
+  ```
+
+  ```c++
+  //Floyd算法,时间复杂度O(n^3)
+  cosnt int INF=1e9;
+  初始化：
+      for (int i = 1; i <= n; i ++ )
+          for (int j = 1; j <= n; j ++ )
+              if (i == j) d[i][j] = 0;
+              else d[i][j] = INF;
+  
+  // 算法结束后，d[a][b]表示a到b的最短距离
+  void floyd()
+  {
+      for (int k = 1; k <= n; k ++ )
+          for (int i = 1; i <= n; i ++ )
+              for (int j = 1; j <= n; j ++ )
+                  d[i][j] = min(d[i][j], d[i][k] + d[k][j]);
+  }
+  
+  ```
+
+  
+
+  * 拓扑排序
+  * 关键路径
+  * 目标：考虑一些细节是否到位
+
+* 能不能直接调用函数
+
+  * 5行以下的随便调用
+
+  ```c++
+  pop();
+  push();
+  swap(a,b);
+  abs();
+  pow(x,y);//x的y次幂
+  sqrt();//平方根
+  ```
+
+  
+
+* 过程
+  * 考前最好复习一遍常用的算法模板
+
+```c++
+//先假设所用函数已经设立，然后在主函数那里直接用，用完再回去写该函数
+//如假如要用折半查找，先
+int binary(){
+//先留空，下面的ans函数写完再回来写
+}
+int ans(int s[],int n ,int k){
+//答案
+}
+```
+
+* 空间复杂度的分析
+  * 申请了哪些数组
+  * 申请了哪些结点
+  * 递归的时候有多少层的递归（树的高度，递归的层数）
