--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -134,3 +134,13 @@ math: true
 ![](/img/2235f6f9-b6bf-4e2a-a536-b8a7508bd29b.png)
 
 ![](/img/399c208f-d3a9-4c26-9073-1435d641c4a9.png)
+
+错题：
+
+# 4.14 
+
+![](/img/35da7ba5-ac95-4f02-b660-a9b9cca5f0f1.png)
+
+![](/img/e3b5438b-036d-4277-9975-25d0f61b1782.png)
+
+错题：
