--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -8,7 +8,7 @@ index_img: /img/1920x1080 (13).jpg
 math: true
 ---
 
-# 4.1 时间复杂度
+## 4.1 时间复杂度
 
 ![](/img/1000090142.jpg)
 
@@ -19,7 +19,7 @@ math: true
 * 1
 * 2
 
-# 4.2 时间复杂度
+## 4.2 时间复杂度
 
 ![](/img/1000090273.png)
 
@@ -34,7 +34,7 @@ math: true
 * 1
 * 2
 
-# 4.3 链表
+## 4.3 链表
 
 ![](/img/c7612a1d-066a-44eb-883f-69f8d0e5f0c2.jpeg)
 
@@ -45,7 +45,7 @@ math: true
 * 2
   * 注意特殊条件
 
-# 4.4 链表
+## 4.4 链表
 
 ![](/img/1de1061e-7c58-4174-bd38-66c53f0a1077.png)
 
@@ -56,7 +56,7 @@ math: true
 * 2
   * -1表示指向NULL，-2表示空表项
 
-# 4.5 栈
+## 4.5 栈
 
 ![](/img/78c9220e-2be1-4f72-bd40-25dc166dc0db.jpeg)
 
@@ -67,7 +67,7 @@ math: true
 * 无
 * 卡塔兰数的计算确实只与**入栈序列的长度**有关，而**不关心入栈序列的具体内容或元素的顺序**。这是因为卡塔兰数计算的是栈操作的合法性约束，而栈操作的合法性取决于**元素的相对入栈顺序和出栈顺序**，而非具体的元素值。因此，对于任何长度为 nnn 的入栈序列，合法的出栈序列的个数始终是固定的，由卡塔兰数给出。
 
-# 4.6 队列和栈
+## 4.6 队列和栈
 
 ![](/img/c450ec4d-668c-4100-9388-189aa3332d2a.png)
 
@@ -77,7 +77,7 @@ math: true
 
 * 无
 
-# 4.7 队列和栈
+## 4.7 队列和栈
 
 ![](/img/e98c3709-dfde-4208-b473-67cd033cd511.png)
 
@@ -87,7 +87,7 @@ math: true
 
 * 无
 
-# 4.8 队列
+## 4.8 队列
 
 ![](/img/b6c0d57c-3e58-44a1-8e8d-c46541044268.png)
 
@@ -97,7 +97,7 @@ math: true
 
 * 无
 
-# 4.9 中缀表达式和后缀表达式
+## 4.9 中缀表达式和后缀表达式
 
 ![](/img/9c8c4bba-e4b8-4c40-9bf6-7820fcd13770.png)
 
@@ -105,7 +105,7 @@ math: true
 
 错题：
 
-# 4.10 后缀表达式和二叉树的层序遍历
+## 4.10 后缀表达式和二叉树的层序遍历
 
 ![](/img/aff03896-e878-4ebf-87e6-2d9aa59cce52.jpeg)
 
@@ -113,7 +113,7 @@ math: true
 
 错题：
 
-# 4.11 数组的压缩存储
+## 4.11 数组的压缩存储
 
 ![](/img/b07e9735-d19a-4c81-83b8-4292cc53b690.jpeg)
 
@@ -121,7 +121,7 @@ math: true
 
 错题：
 
-# 4.12 kmp算法
+## 4.12 kmp算法
 
 ![](/img/d717129d-709c-4ed5-b9e4-9164b1a851d4.png)
 
@@ -129,7 +129,7 @@ math: true
 
 错题：
 
-# 4.13 kmp算法
+## 4.13 kmp算法
 
 ![](/img/2235f6f9-b6bf-4e2a-a536-b8a7508bd29b.png)
 
@@ -137,7 +137,7 @@ math: true
 
 错题：
 
-# 4.14 
+## 4.14 二叉树
 
 ![](/img/35da7ba5-ac95-4f02-b660-a9b9cca5f0f1.png)
 
