--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -105,6 +105,11 @@ math: true
 
 错题：
 
+* 无
+
+* 中缀转后缀，左优先
+* 中缀转前缀，左优先（王道上的是错的）
+
 ## 4.10 后缀表达式和二叉树的层序遍历
 
 ![](/img/aff03896-e878-4ebf-87e6-2d9aa59cce52.jpeg)
@@ -112,6 +117,8 @@ math: true
 ![](/img/dfc37544-7ddf-4e8c-840f-4fb98e885e38.jpeg)
 
 错题：
+
+* 无
 
 ## 4.11 数组的压缩存储
 
@@ -121,6 +128,8 @@ math: true
 
 错题：
 
+* 无
+
 ## 4.12 kmp算法
 
 ![](/img/d717129d-709c-4ed5-b9e4-9164b1a851d4.png)
@@ -128,6 +137,8 @@ math: true
 ![](/img/b0c11abc-86b2-4a3a-b5c7-cc8bb33c5a03.png)
 
 错题：
+
+* 无
 
 ## 4.13 kmp算法
 
@@ -137,6 +148,8 @@ math: true
 
 错题：
 
+* 无
+
 ## 4.14 二叉树
 
 ![](/img/35da7ba5-ac95-4f02-b660-a9b9cca5f0f1.png)
@@ -144,3 +157,25 @@ math: true
 ![](/img/e3b5438b-036d-4277-9975-25d0f61b1782.png)
 
 错题：
+
+* 无
+
+## 4.15 二叉树
+
+![](/img/2c58a8a3-5fb0-4bef-8f7b-87bf4772e8ac.png)
+
+![](/img/d162f443-0c05-4e27-b5ac-f0eb1d04816b.png)
+
+错题：
+
+* 
+
+## 4.16 二叉树
+
+![](/img/edeb52eb-3937-4d7c-91d1-7d2e9ca9c6ca.png)
+
+![](/img/f6d5ff73-4b0d-4d2e-b141-c74457baedf5.png)
+
+错题：
+
+* 
