--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -168,7 +168,8 @@ math: true
 
 错题：
 
-* 
+* 1
+  * 有n个结点的二叉树，可能的层高为完全二叉树的层高m~连成一条即n的层高，可能的数量为n-m+1
 
 ## 4.16 二叉树
 
@@ -178,4 +179,4 @@ math: true
 
 错题：
 
-* 
+* 无
