--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -1970,7 +1970,7 @@ Q.rear=(Q.rear+1)%maxsize;//队尾指针加1取模
 
 ##### 循环队列——出队操作
 
-![](/img/5 003054.jpg)
+![](/img/5003054.jpg)
 
 ![](/img/003037.jpg)
 
