--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -315,10 +315,12 @@ math: true
   // 栈顶的值
   stk[tt];
   
+  ```
+
 // 判断栈是否为空，如果 tt > 0，则表示不为空
   if (tt > 0) not empty;
   else empty;
-  
+
   //栈顶
   stk[tt];
   ```
@@ -344,7 +346,7 @@ math: true
       else empty;
   
   ```
-  
+
   ```c++
   //循环队列
   // hh 表示队头，tt表示队尾的后一个位置
@@ -368,11 +370,11 @@ if (hh != tt)
   }
   
   ```
+
   
-  
-  
+
   * DFS，BFS
-  
+
   ```c++
   bool st[N];
   int dfs(int u)
@@ -386,7 +388,7 @@ if (hh != tt)
       }
   }
   ```
-  
+
   ```c++
   queue<int> q;//初始化
   st[1] = true; // 表示1号点已经被遍历过
@@ -429,11 +431,11 @@ if (hh != tt)
       return 0;
   }
   ```
+
   
-  
-  
+
   * 拓扑排序
-  
+
   ```c++
   int n,m;
   int h[N],e[N],ne[N],idx;
@@ -772,6 +774,7 @@ if (hh != tt)
   
 
 * 过程
+  
   * 考前最好复习一遍常用的算法模板
 
 ```c++
@@ -789,3 +792,191 @@ int ans(int s[],int n ,int k){
   * 申请了哪些数组
   * 申请了哪些结点
   * 递归的时候有多少层的递归（树的高度，递归的层数）
+
+## 栈、队列的一些代码模板
+
+### 数组实现栈
+
+```c++
+//数组实现栈
+
+//初始化栈
+int stk[N],tt=0;
+//入栈
+stk[++tt]=x;
+//弹出栈顶元素但是不出栈
+x=stk[tt];
+//弹出栈顶元素并且出栈
+x=stk[tt--];
+//判断栈空
+if(tt==0)
+//判断栈满
+if(tt==maxsize)
+```
+
+### 链表实现栈
+
+```c++
+//链表实现栈
+
+//定义栈结点
+struct Lnode{
+    int data;
+    Lnode* next;
+};
+using listack=Lnode*;
+//初始化链表实现栈
+bool initstack(listack &s){
+  s=(Lnode *)malloc(sizeof(Lnode));
+    s->next=NULL;
+    return true;
+}
+//栈空
+bool isempty(listack s){
+    if(s->next==null)
+        return true;
+    else 
+        return false;
+    
+    
+}
+//入栈
+bool push(listack &s,int x){
+    Lnode *p=(Lnode *)malloc(sizeof(Lnode));
+    p->data= x;
+    p->next=s->next;
+    s->next=p;
+    return true;
+}
+//出栈
+bool pop(listack &s,int &x){
+    if(isempty(s)) return false;
+    Lnode *p=s->next;
+    x=p->data;
+    s->next=p->next;
+    free(p);
+    return true;
+}
+
+```
+
+### 双向链表实现栈（栈顶在链尾）
+
+```c++
+//双链表实现栈，栈顶在链尾
+
+//定义双链表结点
+struct dnode{
+    int data;
+    dnode*pre,*next;
+};
+//定义栈
+struct dstack{
+    dnode *head,*rear;
+};
+using stk=dstack*;
+//初始化一个链栈（双链表实现，栈顶在链尾）
+bool init(stk &s){
+    s=(dstack*)malloc(sizeof(dstack));//初始化一个链栈，双链表实现，栈顶在链尾）
+    dnode *p=(dnode *)malloc(sizeof(dnode));
+    p->next=NULL;
+    p->pre=NULL;
+    s->head=p;
+    s->rear=p;
+    return true;
+}
+//判断栈是否为空
+bool isempty(stk s){
+    if(s->head==s->rear)
+        return true;
+    else 
+        return false;
+}
+//入栈（在双链表链尾插入）
+bool push(dstack &s,int x){
+    dnode *p=(dnode *)malloc(sizeof(dnode));
+    p->data=x;
+    p->next=NULL;
+    p->pre=s->rear;
+    s->rear->next=p;
+    s->rear=p;
+    return true;
+}
+//出栈（删除双链表链尾元素）
+bool pop(dstack &s,int &x){
+    if(isempty(s))
+        return false;
+    dnode *p=s->rear;
+    x=p->data;
+    s->rear=p->pre;
+    s->rear->next=NULL;
+    free(p);
+    return true;
+}
+```
+
+### 数组实现循环队列
+
+```c++
+//数组实现循环队列
+
+//定义队列
+#define maxsize 100
+struct queue{
+    int data[maxsize];
+    int rear,head;
+};
+
+//初始化队列
+void init(queue &q){
+    q.rear=q.head=0;
+    return true;
+}
+
+//判断队空
+bool isempty(queue q){
+    if(q.head==q.rear)
+		return true;
+    else 
+        return false;
+    
+}
+//判断队满
+bool isfull(queue q){
+    if((q.rear+1)%maxsize==q.head)
+        return true;
+    else return false;
+}
+//入队
+bool inqueue(queue &q,int x){
+    if(isfull(q))return false;
+    q.data[q.rear]=x;
+    q.rear=(q.rear+1)%maxsize;
+    return true;
+}
+//出队
+bool outqueue(queue &q,int &x){
+    if(isempty(q)) return false;
+    x=q.data[q.head];
+    q.head=(q.head+1)%maxsize;
+    return true;
+}
+
+```
+
+### 单链表实现队列
+
+```c++
+//单链表实现队列
+
+//定义链表节点
+
+//定义链表
+
+//判空
+
+//入队
+
+//出队
+```
+
