--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -180,3 +180,19 @@ math: true
 错题：
 
 * 无
+
+## 4.17 二叉树
+
+![](/img/d7898871-0f2c-4904-a0ac-e0a3b6e34540.png)
+
+![](/img/93cc660e-75cf-488b-95d9-fbebaf7b23c1.png)
+
+错题：
+
+## 4.18 二叉树
+
+![](/img/d07d18f2-6af3-4a9c-af6b-cff517a6f76c.png)
+
+![](/img75982967-5af9-48d6-8198-d614d886442e.png)
+
+错题：
