--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -827,13 +827,13 @@ struct Lnode{
 using listack=Lnode*;
 //初始化链表实现栈
 bool initstack(listack &s){
-  s=(Lnode *)malloc(sizeof(Lnode));
-    s->next=NULL;
+  s=new Lnode;
+    s->next=nullptr;
     return true;
 }
 //栈空
 bool isempty(listack s){
-    if(s->next==null)
+    if(s->next==nullptr)
         return true;
     else 
         return false;
@@ -842,7 +842,7 @@ bool isempty(listack s){
 }
 //入栈
 bool push(listack &s,int x){
-    Lnode *p=(Lnode *)malloc(sizeof(Lnode));
+    Lnode *p=new Lnode;
     p->data= x;
     p->next=s->next;
     s->next=p;
@@ -854,7 +854,7 @@ bool pop(listack &s,int &x){
     Lnode *p=s->next;
     x=p->data;
     s->next=p->next;
-    free(p);
+    delete p;
     return true;
 }
 
@@ -877,10 +877,10 @@ struct dstack{
 using stk=dstack*;
 //初始化一个链栈（双链表实现，栈顶在链尾）
 bool init(stk &s){
-    s=(dstack*)malloc(sizeof(dstack));//初始化一个链栈，双链表实现，栈顶在链尾）
-    dnode *p=(dnode *)malloc(sizeof(dnode));
-    p->next=NULL;
-    p->pre=NULL;
+    s=new dstack;//初始化一个链栈，双链表实现，栈顶在链尾）
+    dnode *p=new dnode;
+    p->next=nullptr;
+    p->pre=nullptr;
     s->head=p;
     s->rear=p;
     return true;
@@ -893,24 +893,24 @@ bool isempty(stk s){
         return false;
 }
 //入栈（在双链表链尾插入）
-bool push(dstack &s,int x){
-    dnode *p=(dnode *)malloc(sizeof(dnode));
+bool push(stk &s,int x){
+    dnode *p=new dnode;
     p->data=x;
-    p->next=NULL;
+    p->next=nullptr;
     p->pre=s->rear;
     s->rear->next=p;
     s->rear=p;
     return true;
 }
 //出栈（删除双链表链尾元素）
-bool pop(dstack &s,int &x){
+bool pop(stk &s,int &x){
     if(isempty(s))
         return false;
     dnode *p=s->rear;
     x=p->data;
     s->rear=p->pre;
-    s->rear->next=NULL;
-    free(p);
+    s->rear->next=nullptr;
+    delete p;
     return true;
 }
 ```
@@ -921,7 +921,7 @@ bool pop(dstack &s,int &x){
 //数组实现循环队列
 
 //定义队列
-#define maxsize 100
+const int maxsize =100;
 struct queue{
     int data[maxsize];
     int rear,head;
@@ -930,7 +930,6 @@ struct queue{
 //初始化队列
 void init(queue &q){
     q.rear=q.head=0;
-    return true;
 }
 
 //判断队空
@@ -969,14 +968,73 @@ bool outqueue(queue &q,int &x){
 ```c++
 //单链表实现队列
 
-//定义链表节点
+//定义链表队列节点
+struct qnode{
+    int data;
+    qnode *next;  
+};
 
-//定义链表
+//定义队列
+struct listqueue{
+    qnode*head,*rear;
+};
+using lq=listqueue*;
 
+//初始化队列
+bool init(lq &q){
+    q=new listqueue;
+    qnode *p=new qnode;
+    q->head=p;
+    q->rear=p;
+    p->next=nullptr;
+    return true;
+}
 //判空
+bool isempty(lq q){
+    return q->head==q->rear;
+}
 
 //入队
+bool inqueue(lq &q,int x){
+    qnode *p=new qnode;
+  	p->data=x;
+    p->next=nullptr;
+    q->rear->next=p;
+    q->rear=p;
+    return true;
+}
 
 //出队
+bool outqueue(lq &q,int &x){
+    if(isempty(q))return false;
+    qnode *p=q->head->next;
+    x=p->data;
+    q->head->next=p->next;
+    if(q->head->next==nullptr)
+        q->rear=q->head;
+    delete p;
+    return true;
+    
+}
+```
+
+## 树的一些代码模板
+
+### 数组实现二叉树
+
+```c++
+//数组实现二叉树
+
+//定义树结点
+
+//初始化二叉树
+
+//判空树结点
+
+//找到结点的左孩子
+
+//找到结点的右孩子
+
+//找到结点的父结点
 ```
 
