--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -196,3 +196,31 @@ math: true
 ![](/img75982967-5af9-48d6-8198-d614d886442e.png)
 
 错题：
+
+## 4.19 
+
+![](/img/98491962-6cac-4a2a-8b8e-f163481f4389.jpeg)
+
+![](/img/a12222a8-ef7b-4ed7-a03b-b7662653e7af.png)
+
+错题：
+
+
+
+## 4.20
+
+![](/img/e5531787-fcac-4c71-bc3a-23365783ecc4.png)
+
+![](/img/b4fa8b06-0ac1-4994-a0c0-67d42a43b1fd.png)
+
+错题：
+
+
+
+## 4.21
+
+![](/img/24fb0c74-22d0-4407-8a31-3239ed2ba14c.png)
+
+![](/img/a0d56b61-7e77-4c7f-a5ce-0b6aa5210858.png)
+
+错题：
